# ChangeLog for net-fs/samba
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-fs/samba/ChangeLog,v 1.417 2010/05/20 00:04:21 jer Exp $

  20 May 2010; Jeroen Roovers <jer@gentoo.org> samba-3.4.6.ebuild:
  Stable for HPPA (bug #300158).

  19 May 2010; Jeroen Roovers <jer@gentoo.org> samba-3.4.6.ebuild,
  samba-3.4.8.ebuild, samba-3.5.0.ebuild, samba-3.5.2-r1.ebuild,
  samba-3.5.3.ebuild:
  DEPEND on virtual/fam (bug #320593).

*samba-3.5.3 (19 May 2010)

  19 May 2010; Patrick Lauer <patrick@gentoo.org> +samba-3.5.3.ebuild:
  Bump

  18 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> samba-3.4.6.ebuild:
  x86 stable wrt bug #300158

  11 May 2010; Patrick Lauer <patrick@gentoo.org> files/samba-init:
  Fixing init script for #301263

  11 May 2010; Patrick Lauer <patrick@gentoo.org> samba-3.4.6.ebuild,
  samba-3.4.8.ebuild, samba-3.5.2-r1.ebuild:
  Removing stray dobin call that triggered #318001

*samba-3.4.8 (11 May 2010)

  11 May 2010; Patrick Lauer <patrick@gentoo.org> +samba-3.4.8.ebuild:
  Bump

*samba-3.5.2-r1 (10 May 2010)

  10 May 2010; Fabio Erculiani <lxnay@gentoo.org>
  +files/3.5.2-backport-fix-ipv6-cifs-mount.patch, -samba-3.5.2.ebuild,
  +files/3.5.2-backport-fix-smbclient-segfault.patch,
  +samba-3.5.2-r1.ebuild:
  fix two segfaults, see upstream bugs 7205, 7250. Patches have been
  backported, can be dropped when 3.5.3 is out

  03 May 2010; Olivier Crête <tester@gentoo.org> ChangeLog:
  amd64 stable, bug #300158

  25 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  samba-3.0.37.ebuild:
  Delete calls to deprecated python_version().

  08 Apr 2010; Patrick Lauer <patrick@gentoo.org> samba-3.5.2.ebuild:
  Fix typo #313813

  07 Apr 2010; Patrick Lauer <patrick@gentoo.org> -samba-3.3.10.ebuild,
  -samba-3.4.5.ebuild:
  Remove old

*samba-3.5.2 (07 Apr 2010)

  07 Apr 2010; Patrick Lauer <patrick@gentoo.org> +samba-3.5.2.ebuild:
  Bump to 3.5.2
