@@ -1,6 +1,10 @@
 # ChangeLog for net-fs/samba
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/samba/ChangeLog,v 1.417 2010/05/20 00:04:21 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/samba/ChangeLog,v 1.418 2010/05/21 17:31:08 vostorga Exp $
+
+  21 May 2010; Víctor Ostorga <vostorga@gentoo.org> samba-3.5.3.ebuild:
+  Fixing build with USE=ads winbind, patch thanks to Rainer Ruecker
+  <rainer@emdete.de> bugs #314709 #315975
 
   20 May 2010; Jeroen Roovers <jer@gentoo.org> samba-3.4.6.ebuild:
   Stable for HPPA (bug #300158).
